SFDC Automation/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <description>0 (No approval required), 1 (FAM), 2 (DAM) and 3 (VP AM )</description>
        <label>Approval Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Price__c</fullName>
        <label>Approved Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Ryder_Finance_Vendor_Date__c</fullName>
        <label>Approved Ryder Finance Vendor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_to_take__c</fullName>
        <formula>Approved_Price__c/Take_Price2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved % to take</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Is_Vehicle__c</fullName>
        <description>Vehicle&apos;s AsIs field value</description>
        <formula>Vehicle__r.AS_IS_Vehicle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As Is Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BankOfAmerica__c</fullName>
        <formula>Vehicle__r.BankOfAmerica__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BankOfAmerica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <label>Base</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <formula>Vehicle__r.NBV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <description>Vehicle Branch Name</description>
        <formula>Vehicle__r.Branch_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Warranty Category</label>
        <picklist>
            <picklistValues>
                <fullName>3 month / 25,000 miles - Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month / 50,000 miles - Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 month / 100,000 miles - Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 month / 10,000 miles - Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month / 20,000 miles - Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 month / 40,000 miles - Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 month / 10,000 miles - Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month / 20,000 miles - Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 month / 40,000 miles - Class B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Offer_Price__c</fullName>
        <label>Customer Offer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_held__c</fullName>
        <formula>Vehicle__r.Days_At_UTC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Code__c</fullName>
        <formula>Vehicle__r.display_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Fee_del__c</fullName>
        <label>Document Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Percent__c</fullName>
        <label>Down Payment %</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eng_Mdl__c</fullName>
        <description>Vehicle Engine Model</description>
        <formula>Vehicle__r.ENG_MDL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engine Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <label>Finance Company</label>
        <picklist>
            <picklistValues>
                <fullName>Agri-Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada-Bodkin Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keystone Equipment Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North American Equipment Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northland Credit Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheaten Financial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <formula>UnitPrice - Book_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain (Loss)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <formula>Document_Fee_del__c  +   Miscellaneous_Fee__c   +  Warranty_Amount__c  +  Sales_Tax__c  +    Transfer_expense_included__c +  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_Model__c</fullName>
        <description>Concatenation of Vehicle.Manufacturer__c and Vehicle.Model__c</description>
        <formula>Vehicle__r.Manufacturer__c &amp; &apos; &apos; &amp; Vehicle__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make/Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>Vehicle__r.Manufacturer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meq_sale_prc_am__c</fullName>
        <formula>Vehicle__r.meq_sale_prc_am__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meq sale prc am</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <description>Vehicle Miles</description>
        <formula>Vehicle__r.MILES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Fee__c</fullName>
        <label>Miscellaneous Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>TEXT(Vehicle__r.Model_Year__c)</formula>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Vehicle__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <formula>((( UnitPrice - Down_Payment__c ) + Sales_Tax__c ) * (VALUE(TEXT(Interest_Rate__c))/1200)) / (1 - (1 / Base__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NVI_Percent__c</fullName>
        <description>NVI Percentage</description>
        <formula>(UnitPrice* 10000) / Vehicle__r.NVI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVI %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NVI__c</fullName>
        <description>Vehicle NVI</description>
        <formula>Vehicle__r.NVI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonCompliantCAUnits__c</fullName>
        <formula>Vehicle__r.NonCompliantCAUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonCompliantCAUnits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overstock__c</fullName>
        <formula>Vehicle__r.Overstock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overstock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Percentage__c</fullName>
        <formula>IF(AND(UnitPrice &gt; 0, Take_Price2__c &gt; 0), UnitPrice / Take_Price2__c *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item_Description__c</fullName>
        <label>Quote Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item_Number__c</fullName>
        <displayFormat>QLI-{00000000}</displayFormat>
        <label>Quote Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quote_Price__c</fullName>
        <label>Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RRP_Extended_Warranty_Pricing_URL__c</fullName>
        <defaultValue>&apos;http://ride//RRRPWCalculator//RRRPCalculator.aspx&apos;</defaultValue>
        <description>This field displays the link for RRP Extended Warranty Pricing.</description>
        <label>RRP Extended Warranty Pricing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SAM_Class__c</fullName>
        <formula>Vehicle__r.SAM_CLASS__c &amp; &apos; &apos; &amp; Vehicle__r.VEH_CLS_SAM_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAM Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Description__c</fullName>
        <formula>Vehicle__r.SAM_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAM Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <description>Vehicle Ask Price</description>
        <formula>Vehicle__r.Ask_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ask Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpecialPrice__c</fullName>
        <formula>Vehicle__r.SpecialPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SpecialPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Take_Price2__c</fullName>
        <label>Take Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Take_Price_percent__c</fullName>
        <formula>UnitPrice/Take_Price2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Take Price (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer_expense_included__c</fullName>
        <label>Transfer expense included</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_expense_paid_by__c</fullName>
        <label>Transfer expense paid by</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VehicleImage1__c</fullName>
        <label>VehicleImage1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleImage2__c</fullName>
        <label>VehicleImage2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleImage3__c</fullName>
        <label>VehicleImage3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vosa__c</fullName>
        <formula>Vehicle__r.VOSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vosa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Amount__c</fullName>
        <label>Warranty Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Provider__c</fullName>
        <label>Warranty Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium 2000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_From_Editing_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Quote.RecordType.DeveloperName = &apos;UVS&apos;, 
ISCHANGED( Quantity ))</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Quantity can not be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_From_Editing_When_Approved</fullName>
        <active>false</active>
        <description>Prevents the users from editing the quote line item record, when a quote &apos;s BTR is approved.</description>
        <errorConditionFormula>AND(Quote.RecordType.DeveloperName = &apos;UVS&apos;,
  ISPICKVAL(Quote.Status, &apos;BTR Approved&apos;),
  NOT($Profile.Name = &apos;System Administrator&apos;))</errorConditionFormula>
        <errorMessage>The quote of this quote line item&apos;s BTR is approved and cannot be edited further.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_From_Editing_When_Submitted</fullName>
        <active>true</active>
        <description>Prevents the users, except FAMs, DAMs and VP AMs, from editing the quote record, when a quote is submitted for BTR Approval.</description>
        <errorConditionFormula>AND(
  Quote.RecordType.DeveloperName = &apos;UVS&apos;,
  ISPICKVAL(Quote.Status, &apos;Submitted for BTR Approval&apos;),
  NOT(
   OR(
     $Profile.Name = &apos;System Administrator&apos;,
	 $Profile.Name = &apos;VP Asset Management&apos;,
     $Profile.Name = &apos;DAM&apos;,
     $Profile.Name = &apos;FAM&apos;,
     $Profile.Name = &apos;VSM_VSR&apos;
   )
  )
)</errorConditionFormula>
        <errorMessage>The quote record that has this quote line items has been submitted for approval and cannot be edited at this moment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Sale_Price_From_Editing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Quote.RecordType.DeveloperName = &apos;UVS&apos;, 
ISPICKVAL(Quote.Status, &apos;BTR Approved&apos;), 
NOT($Profile.Name = &apos;System Administrator&apos;),
ISCHANGED( UnitPrice ))</errorConditionFormula>
        <errorMessage>The quote of this quote line item&apos;s BTR is approved and Sale Price can not be edited further.</errorMessage>
    </validationRules>
</CustomObject>